changed website link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/in/pasumarthi-nivas-2667b9257">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/NivasPasumarthy">Twitter</a>
-        <a class="footer-link" href="https://www.cricbuzz.com/">Website</a>
+        <a class="footer-link" href="https://nivas1907.github.io/personal-site/">Website</a>
         <p class="copyright">© 2023 Nivas Pasumarthy.</p>
     </div>
       
